Fix for issues 1. Popover is getting closed when datatable is inside the popover and when ESC is clicked.                2. Min, Max validations on date, datetime and time widgets                3. Pagination(Basic pagination) UI got disturbed for data table when spacing is set to condensed

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -1193,6 +1193,9 @@ html, body {
           &:after {
             bottom: -1em;
           }
+          &[disabled="disabled"] {
+            color:#aaaaaa;
+          }
         }
       }
       table {
@@ -1911,6 +1914,10 @@ If the height and width are not specified the video takes the height of the post
         &.disabled a {
           &[disabled] {
             pointer-events: none;
+            display: inline-block;
+            padding-left: 0;
+            padding-right: 0;
+            text-align: center;
             &:before {
               display: inline-block;
             }
